# ICP--Blockchain-Fraud-Detector

./: BACKEND_DEVELOPER_GUIDE.md  README.md  test_fraud_detection.py
backend/: .env  Cargo.toml
backend/src/: backen.rs  db.rs  main.rs  models.rs
backend/src/ipc/: client.rs
fraud_detection_module/: BACKEND_INTEGRATION_GUIDE.md  README.md  fraud_detection.py  fraud_model.pkl  train_model.py
frontend/: .env.example  BACKEND_DEV_QUICKSTART.md  TESTING_GUIDE.md  index.html  package-lock.json  package.json  script.js  style.css  test_plan.md
frontend react/: SETUP.md  package-lock.json  package.json
frontend react/src/: App.js
frontend react/src/components/: TailwindTest.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ErrorBoundary.jsx  ErrorMessage.jsx  Footer.jsx  Header.jsx  Spinner.jsx  TransactionTable.jsx  WalletSearch.jsx
frontend/src/pages/: Dashboard.jsx  InfoPage.jsx
frontend/src/services/: README.md  api.js  api.js.backup
