       [package]
name = "ipc-fraud-detection-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
mongodb = "2.4.0"
reqwest = { version = "0.11.16", features = ["json"] }
tokio = { version = "1.27.0", features = ["full"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
futures = "0.3.28"
thiserror = "1.0.40"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
ethers = { version = "2.0.4", features = ["ws"] }
hex = "0.4.3"
regex = "1.8.1"
      

      